# MPL

./: .dockerignore  .gitignore  .travis.yml  .travis.yml.swp  CMakeLists.txt  Dockerfile  README.md
MPLPerformanceTests/: CMakeLists.txt
MPLPerformanceTests/src/: PerfTestCombined.cpp  PerfTestCombinedFixedSizeMsg.cpp  PerfTestCombinedVariableSizeMsg.cpp  PerformanceConnector.cpp  PerformanceResponder.cpp
MPLtests/: .CMakeLists.swp  .CMakeLists.txt.swp  CMakeLists.txt
MPLtests/src/: PerformanceConnector.cpp  PerformanceResponder.cpp
TestSimpleFileTransferService/: CMakeLists.txt
TestSimpleFileTransferService/include/: Commands.h  FileSystemLin.h  FileSystemWin.h
TestSimpleFileTransferService/src/: FileSystemLin.cpp  FileSystemWin.cpp  FileTransferClient.cpp  FileTransferService.cpp
include/: ClientHandler.h  Cpp11-BlockingQueue.h  EndPoint.h  Logger.h  Message.h  Platform.h  Receiver.h  ReceiverExceptions.h  Sender.h  SenderExceptions.h  StopWatch.h  TCPConnector.h  TCPResponder.h  TCPSocket.h  TCPSocketExceptions.h  Task.h  ThreadPool.h  mpl.h
src/: .swp  ClientHandler.cpp  Cpp11-BlockingQueue.cpp  EndPoint.cpp  Logger.cpp  Message.cpp  Platform.cpp  Receiver.cpp  Sender.cpp  TCPConnector.cpp  TCPResponder.cpp  TCPSocket.cpp  Task.cpp
unit_tests/: CMakeLists.txt  Message_unit_test.cpp
